suite importation liste de mots (début de rapport d'importation)

--- a/web/src/main/webapp/admin/listesEtMots.zul
+++ b/web/src/main/webapp/admin/listesEtMots.zul
@@ -146,6 +146,18 @@
 			</hbox>
 		</vbox>
 	</window>	
+	
+	<window title="Rapport importation" mode="modal" border="normal" width="420px" visible="@load(not empty vm.messageRapportImportation)">
+		<vbox hflex="true">
+			<hlayout height="50px">
+<!-- 				<image src="~./zul/img/msgbox/information.png"/> -->
+					<textbox rows="10" multiline="true" value="@load(vm.messageRapportImportation)"></textbox>
+			</hlayout>
+			<hbox pack="center" hflex="true">
+				<button label="OK" onClick="@command('fermerRapportImportation')"/>
+			</hbox>
+		</vbox>
+	</window>
 
 		
 		<!-- 
