- filtre des résultats de recherche de prononciation pour tenir compte des caractères combinés (tilde et colon) - ajustement du type de Cascade par défaut des entités JPA pour optimiser les performances à l'écriture - ajout et suppression de mots possibles depuis onglet Listes - modification des valeurs du filtre des rectifications orthographiques

--- a/web/src/main/webapp/listes.zul
+++ b/web/src/main/webapp/listes.zul
@@ -241,12 +241,11 @@
 					<hbox>
 						 <combobox id="actionCombobox" readonly="true"
 							width="300px">
-							<comboitem label="Ajouter les mots sélectionnés à une liste existante"
-								value="AJOUTER_À_LA_LISTE"/>
+							<comboitem label="Ajouter les mots sélectionnés à une liste existante"	value="AJOUTER_À_LA_LISTE"/>
 <!-- 							<comboitem label="Créer un nouvelle liste avec les mots sélectionnés" -->
 <!-- 								value="CRÉER_NOUVELLE_LISTE" />								 -->
-							<comboitem label="Supprimer les mots sélectionnés"
-								value="SUPPRIMER_LES_MOTS" />
+							<comboitem label="Ajouter un nouveau mot"	value="AJOUTER_UN_MOT" />
+							<comboitem label="Supprimer les mots sélectionnés" value="SUPPRIMER_LES_MOTS" />
 						</combobox>
 						
 						<combobox id="catégoriesListeCombobox" readonly="true"
