- exportation Excel: début d'ajout d'informations complémentaires sur  la recherche (description, etc.) - ajustement documentation API (alphabet phonétique international) - ouverture automatique de la liste des valeurs des filtres lors de la sélection d'un filtre

--- a/web/src/main/webapp/listes.zul
+++ b/web/src/main/webapp/listes.zul
@@ -87,7 +87,7 @@
 								</bandpopup>
 							</bandbox>
 
-							<bandbox width="135px" readonly="true"
+							<bandbox id="valeurFiltreBandbox"  width="135px" readonly="true"
 								buttonVisible="true" autodrop="true">
 								<bandpopup vflex="min" hflex="min" style="overflow: auto;" >
 										<listbox width="400px" height="350px" 
