- correction bug description catgram manquante - ajout GENRE et NOMBRE à MotInfo - création service de prononciation - révision chargement de formes (service des Formes) - un mot est à présent identifié par "lemme", "mot", "catgram", "genre", "nombre" (ajout du nombre) - ajout de findByCorpusAndPrimaire au répository DocMetadata - ajout d'une description de la recherche améliorée lors de l'exportation des mots et contextes au format xls - correction bug défilement fiche mot

--- a/web/src/main/webapp/css/corpus.css
+++ b/web/src/main/webapp/css/corpus.css
@@ -36,7 +36,7 @@ body {
  } 
  
  .z-bandbox .z-bandbox-btn {
- background: transparent url('/corpus/images/combobtn.gif')}) no-repeat 0 0;
+ background: transparent url('../images/combobtn.gif')}) no-repeat 0 0;
  }
  
  .z-bandbox .z-bandbox-btn-over {
