- regroupement sous la même structure de données les mots et les lemmes (CorpusInfo) - ajout de nouveaux comparateurs de MotInfo (Lemme/Mot/Catgram, CA_FR, natural) - changement de la visibilité des attributs de MotInfo (public) - création de l'interface et d'une première implémentation d'exportateur de MotInfo - les filtres sont maintenant « Comparable » - gestion des droits d'accès aux onglets (via rôles) - filtres des mots affichés en fonction du rôle de l'utilisateur

--- a/web/src/main/webapp/css/corpus.css
+++ b/web/src/main/webapp/css/corpus.css
@@ -90,7 +90,12 @@ body {
  .terme {
    font-weight: bold;
  }
- 
+
+ .motGras {
+ 	font-weight: bold;
+ 	text-decoration: none; 
+ }
+
  .mot {
  	cursor:pointer;
  	font-weight: bold;
